#9 Added some missing summaries

--- a/docs/api-reference/CRMScript.NetServer.NSBlobEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBlobEntity.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSBlobEntity
   fullName: CRMScript.NetServer.NSBlobEntity
   type: Class
-  summary: 
+  summary: "\nCarrier object for BlobEntity.\n"
   example: 
 - uid: CRMScript.NetServer.NSBlobEntity.#ctor
   commentId: M:CRMScript.NetServer.NSBlobEntity.#ctor
@@ -49,7 +49,7 @@ items:
   nameWithType: NSBlobEntity.#ctor
   fullName: CRMScript.NetServer.NSBlobEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSBlobEntity class.\n"
   remarks: 
   syntax: 
     content: NSBlobEntity
