--- a/docs/api-reference/CRMScript.NetServer.NSBusiness.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBusiness.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSBusiness.#ctor
   - CRMScript.NetServer.NSBusiness.GetId()
   - CRMScript.NetServer.NSBusiness.GetTooltip()
   - CRMScript.NetServer.NSBusiness.GetValue()
-  - CRMScript.NetServer.NSBusiness.#ctor
   - CRMScript.NetServer.NSBusiness.SetId(Integer)
   - CRMScript.NetServer.NSBusiness.SetTooltip(String)
   - CRMScript.NetServer.NSBusiness.SetValue(String)
@@ -17,7 +17,22 @@ items:
   nameWithType: NSBusiness
   fullName: CRMScript.NetServer.NSBusiness
   type: Class
-  summary: 
+  summary: "\nCarrier object for Business.\n"
+  example: 
+- uid: CRMScript.NetServer.NSBusiness.#ctor
+  commentId: M:CRMScript.NetServer.NSBusiness.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSBusiness
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSBusiness.#ctor
+  fullName: CRMScript.NetServer.NSBusiness.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the NSBusiness class.\n"
+  remarks: 
+  syntax: 
+    content: NSBusiness
   example: 
 - uid: CRMScript.NetServer.NSBusiness.GetId()
   commentId: M:CRMScript.NetServer.NSBusiness.GetId()
@@ -79,21 +94,6 @@ items:
       description: NSBusiness name
   example: 
   - "\n<pre><code>NSBusiness thing;\nString name = thing.GetValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSBusiness.#ctor
-  commentId: M:CRMScript.NetServer.NSBusiness.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSBusiness
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSBusiness.#ctor
-  fullName: CRMScript.NetServer.NSBusiness.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSBusiness
-  example: 
 - uid: CRMScript.NetServer.NSBusiness.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSBusiness.SetId(Integer)
   id: 'SetId(Integer)'
