--- a/docs/api-reference/CRMScript.NetServer.NSCategorizationModelDetails.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategorizationModelDetails.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCategorizationModelDetails
   fullName: CRMScript.NetServer.NSCategorizationModelDetails
   type: Class
-  summary: 
+  summary: "\nDetails about a categorization model in HugoAI. Carrier object for CategorizationModelDetails\n"
   example: 
 - uid: CRMScript.NetServer.NSCategorizationModelDetails.#ctor
   commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCategorizationModelDetails.#ctor
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCategorizationModelDetails class.\n"
   remarks: 
   syntax: 
     content: NSCategorizationModelDetails
