--- a/docs/api-reference/CRMScript.NetServer.NSCategorizationStatusResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategorizationStatusResponse.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSCategorizationStatusResponse
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse
   type: Class
-  summary: 
+  summary: "\nCarrier to describe the current categorization training status for a tenant in HugoA. Carrier object for CategorizationStatusResponse.\n"
   example: 
 - uid: CRMScript.NetServer.NSCategorizationStatusResponse.#ctor
   commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSCategorizationStatusResponse.#ctor
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCategorizationStatusResponse class.\n"
   remarks: 
   syntax: 
     content: NSCategorizationStatusResponse
