--- a/docs/api-reference/CRMScript.NetServer.NSCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategory.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCategory
   fullName: CRMScript.NetServer.NSCategory
   type: Class
-  summary: 
+  summary: "\nCarrier object for Category.\n"
   example: 
 - uid: CRMScript.NetServer.NSCategory.#ctor
   commentId: M:CRMScript.NetServer.NSCategory.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCategory.#ctor
   fullName: CRMScript.NetServer.NSCategory.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCategory class.\n"
   remarks: 
   syntax: 
     content: NSCategory
