--- a/docs/api-reference/CRMScript.NetServer.NSChangedData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChangedData.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSChangedData
   fullName: CRMScript.NetServer.NSChangedData
   type: Class
-  summary: 
+  summary: "\nGeneric carrier, used in return values to indicate what data NetServer has changed 'behind the scenes' so clients can know what to update.\n"
   example: 
 - uid: CRMScript.NetServer.NSChangedData.#ctor
   commentId: M:CRMScript.NetServer.NSChangedData.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSChangedData.#ctor
   fullName: CRMScript.NetServer.NSChangedData.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChangedData class.\n"
   remarks: 
   syntax: 
     content: NSChangedData
