--- a/docs/api-reference/CRMScript.NetServer.NSChangedDataItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChangedDataItem.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSChangedDataItem
   fullName: CRMScript.NetServer.NSChangedDataItem
   type: Class
-  summary: 
+  summary: "\nTable name/record ID pair used to refer to records.\n"
   example: 
 - uid: CRMScript.NetServer.NSChangedDataItem.#ctor
   commentId: M:CRMScript.NetServer.NSChangedDataItem.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSChangedDataItem.#ctor
   fullName: CRMScript.NetServer.NSChangedDataItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChangedDataItem class.\n"
   remarks: 
   syntax: 
     content: NSChangedDataItem
