--- a/docs/api-reference/CRMScript.NetServer.NSChatBotSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatBotSettings.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSChatBotSettings
   fullName: CRMScript.NetServer.NSChatBotSettings
   type: Class
-  summary: 
+  summary: "\nChat topic bot settings. Trigger script ids to run on bot events. Carrier object for ChatBotSettings.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatBotSettings.#ctor
   commentId: M:CRMScript.NetServer.NSChatBotSettings.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSChatBotSettings.#ctor
   fullName: CRMScript.NetServer.NSChatBotSettings.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatBotSettings class.\n"
   remarks: 
   syntax: 
     content: NSChatBotSettings
