--- a/docs/api-reference/CRMScript.NetServer.NSChatMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatMessage.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSChatMessage
   fullName: CRMScript.NetServer.NSChatMessage
   type: Class
-  summary: 
+  summary: "\nA message in a chat session. Carrier object for ChatMessage.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatMessage.#ctor
   commentId: M:CRMScript.NetServer.NSChatMessage.#ctor
@@ -41,7 +41,7 @@ items:
   nameWithType: NSChatMessage.#ctor
   fullName: CRMScript.NetServer.NSChatMessage.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatMessage class.\n"
   remarks: 
   syntax: 
     content: NSChatMessage
