--- a/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSChatOpeningHours
   fullName: CRMScript.NetServer.NSChatOpeningHours
   type: Class
-  summary: 
+  summary: "\nChat topic opening hour. Carrier object for ChatOpeningHours.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatOpeningHours.#ctor
   commentId: M:CRMScript.NetServer.NSChatOpeningHours.#ctor
@@ -67,7 +67,7 @@ items:
   nameWithType: NSChatOpeningHours.#ctor
   fullName: CRMScript.NetServer.NSChatOpeningHours.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatOpeningHours class.\n"
   remarks: 
   syntax: 
     content: NSChatOpeningHours
