--- a/docs/api-reference/CRMScript.NetServer.NSChatPresence.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatPresence.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSChatPresence
   fullName: CRMScript.NetServer.NSChatPresence
   type: Class
-  summary: 
+  summary: "\nRepresents presence information for a chat user, bundled with some other useful information. Carrier object for ChatPresence.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatPresence.#ctor
   commentId: M:CRMScript.NetServer.NSChatPresence.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSChatPresence.#ctor
   fullName: CRMScript.NetServer.NSChatPresence.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatPresence class.\n"
   remarks: 
   syntax: 
     content: NSChatPresence
