--- a/docs/api-reference/CRMScript.NetServer.NSChatSession.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSession.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: NSChatSession
   fullName: CRMScript.NetServer.NSChatSession
   type: Class
-  summary: 
+  summary: "\nUse the ChatSessionEntity on the Chat agent instead. Chat sessions belong to a chat topic, and contain messages to/from users. Carrier object for ChatSession.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatSession.#ctor
   commentId: M:CRMScript.NetServer.NSChatSession.#ctor
@@ -25,7 +25,7 @@ items:
   nameWithType: NSChatSession.#ctor
   fullName: CRMScript.NetServer.NSChatSession.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatSession class.\n"
   remarks: 
   syntax: 
     content: NSChatSession
