--- a/docs/api-reference/CRMScript.NetServer.NSChatSessionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSessionEntity.yml
@@ -71,7 +71,7 @@ items:
   nameWithType: NSChatSessionEntity
   fullName: CRMScript.NetServer.NSChatSessionEntity
   type: Class
-  summary: 
+  summary: "\nChat sessions belong to a chat topic, and contain messages to/from users. Carrier object for ChatSessionEntity.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatSessionEntity.#ctor
   commentId: M:CRMScript.NetServer.NSChatSessionEntity.#ctor
@@ -83,7 +83,7 @@ items:
   nameWithType: NSChatSessionEntity.#ctor
   fullName: CRMScript.NetServer.NSChatSessionEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatSessionEntity class.\n"
   remarks: 
   syntax: 
     content: NSChatSessionEntity
