--- a/docs/api-reference/CRMScript.NetServer.NSChatSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSummaryItem.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSChatSummaryItem
   fullName: CRMScript.NetServer.NSChatSummaryItem
   type: Class
-  summary: 
+  summary: "\nChat session summary: id, title, created date. Carrier object for ChatSummaryItem.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatSummaryItem.#ctor
   commentId: M:CRMScript.NetServer.NSChatSummaryItem.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSChatSummaryItem.#ctor
   fullName: CRMScript.NetServer.NSChatSummaryItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatSummaryItem class.\n"
   remarks: 
   syntax: 
     content: NSChatSummaryItem
