--- a/docs/api-reference/CRMScript.NetServer.NSChatTopicAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatTopicAgent.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSChatTopicAgent
   fullName: CRMScript.NetServer.NSChatTopicAgent
   type: Class
-  summary: 
+  summary: "\nUser agents within a chat topic. Which users are assigned and what roles they have within the chat topic. Carrier object for ChatTopicAgent.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatTopicAgent.#ctor
   commentId: M:CRMScript.NetServer.NSChatTopicAgent.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSChatTopicAgent.#ctor
   fullName: CRMScript.NetServer.NSChatTopicAgent.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatTopicAgent class.\n"
   remarks: 
   syntax: 
     content: NSChatTopicAgent
