--- a/docs/api-reference/CRMScript.NetServer.NSChatTopicEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatTopicEntity.yml
@@ -57,7 +57,7 @@ items:
   nameWithType: NSChatTopicEntity
   fullName: CRMScript.NetServer.NSChatTopicEntity
   type: Class
-  summary: 
+  summary: "\nChat topics define who is assigned, when the channel is open for business, and look of the chat widget. Carrier object for ChatTopicEntity.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatTopicEntity.#ctor
   commentId: M:CRMScript.NetServer.NSChatTopicEntity.#ctor
@@ -69,7 +69,7 @@ items:
   nameWithType: NSChatTopicEntity.#ctor
   fullName: CRMScript.NetServer.NSChatTopicEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatTopicEntity class.\n"
   remarks: 
   syntax: 
     content: NSChatTopicEntity
