--- a/docs/api-reference/CRMScript.NetServer.NSChatWidgetSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatWidgetSettings.yml
@@ -57,7 +57,7 @@ items:
   nameWithType: NSChatWidgetSettings
   fullName: CRMScript.NetServer.NSChatWidgetSettings
   type: Class
-  summary: 
+  summary: "\nDefines the look of the chat widget. Carrier object for ChatWidgetSettings.\n"
   example: 
 - uid: CRMScript.NetServer.NSChatWidgetSettings.#ctor
   commentId: M:CRMScript.NetServer.NSChatWidgetSettings.#ctor
@@ -69,7 +69,7 @@ items:
   nameWithType: NSChatWidgetSettings.#ctor
   fullName: CRMScript.NetServer.NSChatWidgetSettings.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSChatWidgetSettings class.\n"
   remarks: 
   syntax: 
     content: NSChatWidgetSettings
