--- a/docs/api-reference/CRMScript.NetServer.NSCheckLicenseStatusResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCheckLicenseStatusResult.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult
   type: Class
-  summary: 
+  summary: "\nResult of NSCheckLicenseStatus.\n"
   example: 
 - uid: CRMScript.NetServer.NSCheckLicenseStatusResult.#ctor
   commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCheckLicenseStatusResult.#ctor
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCheckLicenseStatusResult class.\n"
   remarks: 
   syntax: 
     content: NSCheckLicenseStatusResult
