--- a/docs/api-reference/CRMScript.NetServer.NSCheckoutInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCheckoutInfo.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCheckoutInfo
   fullName: CRMScript.NetServer.NSCheckoutInfo
   type: Class
-  summary: 
+  summary: "\nInformation about the checked-out state of one document, describing whether it is checked out, and to whom.\n"
   example: 
 - uid: CRMScript.NetServer.NSCheckoutInfo.#ctor
   commentId: M:CRMScript.NetServer.NSCheckoutInfo.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCheckoutInfo.#ctor
   fullName: CRMScript.NetServer.NSCheckoutInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCheckoutInfo class.\n"
   remarks: 
   syntax: 
     content: NSCheckoutInfo
