--- a/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSCommandInfo
   fullName: CRMScript.NetServer.NSCommandInfo
   type: Class
-  summary: 
+  summary: "\nAn instance of this class describes a custom command, declared and implemented by a document plugin.\n"
   example: 
 - uid: CRMScript.NetServer.NSCommandInfo.#ctor
   commentId: M:CRMScript.NetServer.NSCommandInfo.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSCommandInfo.#ctor
   fullName: CRMScript.NetServer.NSCommandInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCommandInfo class.\n"
   remarks: 
   syntax: 
     content: NSCommandInfo
