--- a/docs/api-reference/CRMScript.NetServer.NSCompetitor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCompetitor.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCompetitor
   fullName: CRMScript.NetServer.NSCompetitor
   type: Class
-  summary: 
+  summary: "\nCarrier object for Competitor.\n"
   example: 
 - uid: CRMScript.NetServer.NSCompetitor.#ctor
   commentId: M:CRMScript.NetServer.NSCompetitor.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCompetitor.#ctor
   fullName: CRMScript.NetServer.NSCompetitor.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCompetitor class.\n"
   remarks: 
   syntax: 
     content: NSCompetitor
