--- a/docs/api-reference/CRMScript.NetServer.NSConsentInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentInfo.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSConsentInfo
   fullName: CRMScript.NetServer.NSConsentInfo
   type: Class
-  summary: 
+  summary: "\nConsent information for a give person. Consents are for a particular Purpose, and may be withdrawn (see LegalBase).\n"
   example: 
 - uid: CRMScript.NetServer.NSConsentInfo.#ctor
   commentId: M:CRMScript.NetServer.NSConsentInfo.#ctor
@@ -53,7 +53,7 @@ items:
   nameWithType: NSConsentInfo.#ctor
   fullName: CRMScript.NetServer.NSConsentInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSConsentInfo class.\n"
   remarks: 
   syntax: 
     content: NSConsentInfo
