--- a/docs/api-reference/CRMScript.NetServer.NSConsentPerson.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentPerson.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSConsentPerson
   fullName: CRMScript.NetServer.NSConsentPerson
   type: Class
-  summary: 
+  summary: "\nCarrier object for ConsentPerson.\n"
   example: 
 - uid: CRMScript.NetServer.NSConsentPerson.#ctor
   commentId: M:CRMScript.NetServer.NSConsentPerson.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSConsentPerson.#ctor
   fullName: CRMScript.NetServer.NSConsentPerson.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSConsentPerson class.\n"
   remarks: 
   syntax: 
     content: NSConsentPerson
