--- a/docs/api-reference/CRMScript.NetServer.NSConsentSource.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentSource.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSConsentSource
   fullName: CRMScript.NetServer.NSConsentSource
   type: Class
-  summary: 
+  summary: "\nCarrier object for ConsentSource.\n"
   example: 
 - uid: CRMScript.NetServer.NSConsentSource.#ctor
   commentId: M:CRMScript.NetServer.NSConsentSource.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSConsentSource.#ctor
   fullName: CRMScript.NetServer.NSConsentSource.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSConsentSource class.\n"
   remarks: 
   syntax: 
     content: NSConsentSource
