--- a/docs/api-reference/CRMScript.NetServer.NSContact.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContact.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSContact
   fullName: CRMScript.NetServer.NSContact
   type: Class
-  summary: 
+  summary: "\nCarrier object for Contact.n"
   example: 
 - uid: CRMScript.NetServer.NSContact.#ctor
   commentId: M:CRMScript.NetServer.NSContact.#ctor
@@ -67,7 +67,7 @@ items:
   nameWithType: NSContact.#ctor
   fullName: CRMScript.NetServer.NSContact.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSContact class.\n"
   remarks: 
   syntax: 
     content: NSContact
@@ -852,7 +852,7 @@ items:
   nameWithType: NSContact.SetFullName(String)
   fullName: CRMScript.NetServer.NSContact.SetFullName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFullName(String fullName)
