--- a/docs/api-reference/CRMScript.NetServer.NSContactActivity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactActivity.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSContactActivity
   fullName: CRMScript.NetServer.NSContactActivity
   type: Class
-  summary: 
+  summary: "\nCarrier object for ContactActivity.\n"
   example: 
 - uid: CRMScript.NetServer.NSContactActivity.#ctor
   commentId: M:CRMScript.NetServer.NSContactActivity.#ctor
@@ -51,7 +51,7 @@ items:
   nameWithType: NSContactActivity.#ctor
   fullName: CRMScript.NetServer.NSContactActivity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSContactActivity class.\n"
   remarks: 
   syntax: 
     content: NSContactActivity
