--- a/docs/api-reference/CRMScript.NetServer.NSContactEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactEntity.yml
@@ -97,7 +97,7 @@ items:
   nameWithType: NSContactEntity
   fullName: CRMScript.NetServer.NSContactEntity
   type: Class
-  summary: 
+  summary: "\nThe Contact Service. Implements all services working with the Contact object.\n"
   example: 
 - uid: CRMScript.NetServer.NSContactEntity.#ctor
   commentId: M:CRMScript.NetServer.NSContactEntity.#ctor
@@ -109,7 +109,7 @@ items:
   nameWithType: NSContactEntity.#ctor
   fullName: CRMScript.NetServer.NSContactEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSContactEntity class.\n"
   remarks: 
   syntax: 
     content: NSContactEntity
@@ -864,7 +864,7 @@ items:
   nameWithType: NSContactEntity.GetTicketPriority()
   fullName: CRMScript.NetServer.NSContactEntity.GetTicketPriority()
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSTicketPriority GetTicketPriority()
@@ -1754,7 +1754,7 @@ items:
   nameWithType: NSContactEntity.SetSupportAssociate(NSAssociate)
   fullName: CRMScript.NetServer.NSContactEntity.SetSupportAssociate(NSAssociate)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSupportAssociate(NSAssociate supportAssociate)
@@ -1776,7 +1776,7 @@ items:
   nameWithType: NSContactEntity.SetSupportPerson(NSPerson)
   fullName: CRMScript.NetServer.NSContactEntity.SetSupportPerson(NSPerson)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSupportPerson(NSPerson supportPerson)
@@ -1798,7 +1798,7 @@ items:
   nameWithType: NSContactEntity.SetTicketPriority(NSTicketPriority)
   fullName: CRMScript.NetServer.NSContactEntity.SetTicketPriority(NSTicketPriority)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketPriority(NSTicketPriority ticketPriority)
