--- a/docs/api-reference/CRMScript.NetServer.NSContactPersonId.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactPersonId.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSContactPersonId
   fullName: CRMScript.NetServer.NSContactPersonId
   type: Class
-  summary: 
+  summary: # TOOD
   example: 
 - uid: CRMScript.NetServer.NSContactPersonId.#ctor
   commentId: M:CRMScript.NetServer.NSContactPersonId.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSContactPersonId.#ctor
   fullName: CRMScript.NetServer.NSContactPersonId.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSContactPersonId class.\n"
   remarks: 
   syntax: 
     content: NSContactPersonId
