--- a/docs/api-reference/CRMScript.NetServer.NSContactRelationEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactRelationEntity.yml
@@ -47,7 +47,7 @@ items:
   nameWithType: NSContactRelationEntity
   fullName: CRMScript.NetServer.NSContactRelationEntity
   type: Class
-  summary: 
+  summary: "\nRelationship between a (contact/person) and another (contact/person), as described by the RelationDefinition.\n"
   example: 
 - uid: CRMScript.NetServer.NSContactRelationEntity.#ctor
   commentId: M:CRMScript.NetServer.NSContactRelationEntity.#ctor
@@ -59,7 +59,7 @@ items:
   nameWithType: NSContactRelationEntity.#ctor
   fullName: CRMScript.NetServer.NSContactRelationEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSContactRelationEntity class.\n"
   remarks: 
   syntax: 
     content: NSContactRelationEntity
@@ -477,7 +477,7 @@ items:
   nameWithType: NSContactRelationEntity.SetCreatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSContactRelationEntity.SetCreatedBy(NSAssociate)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreatedBy(NSAssociate createdBy)
@@ -499,7 +499,7 @@ items:
   nameWithType: NSContactRelationEntity.SetCreatedDate(DateTime)
   fullName: CRMScript.NetServer.NSContactRelationEntity.SetCreatedDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreatedDate(DateTime createdDate)
@@ -785,7 +785,7 @@ items:
   nameWithType: NSContactRelationEntity.SetUpdatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSContactRelationEntity.SetUpdatedBy(NSAssociate)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedBy(NSAssociate updatedBy)
@@ -807,7 +807,7 @@ items:
   nameWithType: NSContactRelationEntity.SetUpdatedDate(DateTime)
   fullName: CRMScript.NetServer.NSContactRelationEntity.SetUpdatedDate(DateTime)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedDate(DateTime updatedDate)
