--- a/docs/api-reference/CRMScript.NetServer.NSContactSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactSummary.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSContactSummary
   fullName: CRMScript.NetServer.NSContactSummary
   type: Class
-  summary: 
+  summary: "\nSummary of contact with recent activities, chats, and requests included.\n"
   example: 
 - uid: CRMScript.NetServer.NSContactSummary.#ctor
   commentId: M:CRMScript.NetServer.NSContactSummary.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSContactSummary.#ctor
   fullName: CRMScript.NetServer.NSContactSummary.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSContactSummary class.\n"
   remarks: 
   syntax: 
     content: NSContactSummary
