--- a/docs/api-reference/CRMScript.NetServer.NSCountry.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCountry.yml
@@ -47,7 +47,7 @@ items:
   nameWithType: NSCountry
   fullName: CRMScript.NetServer.NSCountry
   type: Class
-  summary: 
+  summary: "\nCarrier object for Country.\n"
   example: 
 - uid: CRMScript.NetServer.NSCountry.#ctor
   commentId: M:CRMScript.NetServer.NSCountry.#ctor
@@ -59,7 +59,7 @@ items:
   nameWithType: NSCountry.#ctor
   fullName: CRMScript.NetServer.NSCountry.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCountry class.\n"
   remarks: 
   syntax: 
     content: NSCountry
