--- a/docs/api-reference/CRMScript.NetServer.NSCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredential.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCredential
   fullName: CRMScript.NetServer.NSCredential
   type: Class
-  summary: 
+  summary: "\nCredentials supported for authentication\n"
   example: 
 - uid: CRMScript.NetServer.NSCredential.#ctor
   commentId: M:CRMScript.NetServer.NSCredential.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCredential.#ctor
   fullName: CRMScript.NetServer.NSCredential.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCredential class.\n"
   remarks: 
   syntax: 
     content: NSCredential
