--- a/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSCredentialType
   fullName: CRMScript.NetServer.NSCredentialType
   type: Class
-  summary: 
+  summary: "\nDescription of credential type\n"
   example: 
 - uid: CRMScript.NetServer.NSCredentialType.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialType.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSCredentialType.#ctor
   fullName: CRMScript.NetServer.NSCredentialType.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCredentialType class.\n"
   remarks: 
   syntax: 
     content: NSCredentialType
@@ -170,7 +170,7 @@ items:
   nameWithType: NSCredentialType.SetCanCreatePerson(Bool)
   fullName: CRMScript.NetServer.NSCredentialType.SetCanCreatePerson(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanCreatePerson(Bool canCreatePerson)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSCredentialType.SetIsUserNameSupported(Bool)
   fullName: CRMScript.NetServer.NSCredentialType.SetIsUserNameSupported(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsUserNameSupported(Bool isUserNameSupported)
