--- a/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSCredentialUser
   fullName: CRMScript.NetServer.NSCredentialUser
   type: Class
-  summary: 
+  summary: "\nInformation about a users credentials in a foreign system that can be bound to a SuperOffice user (associate)\n"
   example: 
 - uid: CRMScript.NetServer.NSCredentialUser.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialUser.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSCredentialUser.#ctor
   fullName: CRMScript.NetServer.NSCredentialUser.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCredentialUser class.\n"
   remarks: 
   syntax: 
     content: NSCredentialUser
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCredentialUser.SetCanCreatePerson(Bool)
   fullName: CRMScript.NetServer.NSCredentialUser.SetCanCreatePerson(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanCreatePerson(Bool canCreatePerson)
