--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSCredentialsGroup
   fullName: CRMScript.NetServer.NSCredentialsGroup
   type: Class
-  summary: 
+  summary: "\nWhen the CredentialType's control is of type link, the user is selected from a source like active directory.  This will then be the organisational unit (e.g. user security group) in active directory. Only one group is listed if the system does not support groups.\n"
   example: 
 - uid: CRMScript.NetServer.NSCredentialsGroup.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialsGroup.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSCredentialsGroup.#ctor
   fullName: CRMScript.NetServer.NSCredentialsGroup.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCredentialsGroup class.\n"
   remarks: 
   syntax: 
     content: NSCredentialsGroup
