--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSCredentialsGroupUsers
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers
   type: Class
-  summary: 
+  summary: "\nThe users within a user group.\n"
   example: 
 - uid: CRMScript.NetServer.NSCredentialsGroupUsers.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSCredentialsGroupUsers.#ctor
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCredentialsGroupUsers class.\n"
   remarks: 
   syntax: 
     content: NSCredentialsGroupUsers
