--- a/docs/api-reference/CRMScript.NetServer.NSCredited.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredited.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCredited
   fullName: CRMScript.NetServer.NSCredited
   type: Class
-  summary: 
+  summary: "\nCarrier object for Credited.\n"
   example: 
 - uid: CRMScript.NetServer.NSCredited.#ctor
   commentId: M:CRMScript.NetServer.NSCredited.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCredited.#ctor
   fullName: CRMScript.NetServer.NSCredited.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCredited class.\n"
   remarks: 
   syntax: 
     content: NSCredited
