--- a/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSCriteriaInformation
   fullName: CRMScript.NetServer.NSCriteriaInformation
   type: Class
-  summary: 
+  summary: "\nCarrier for criteria information. It contains all the search criteria - that is, ArchiveRestrictionInfo - objects, including a  column specification. In addition, it contains the same criteria expressed as an archive, with an array of ArchiveColumnInfo specifications and a set of ArchiveRow rows. The rows of the archive form a subset of the restriction array.\n"
   example: 
 - uid: CRMScript.NetServer.NSCriteriaInformation.#ctor
   commentId: M:CRMScript.NetServer.NSCriteriaInformation.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSCriteriaInformation.#ctor
   fullName: CRMScript.NetServer.NSCriteriaInformation.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCriteriaInformation class.\n"
   remarks: 
   syntax: 
     content: NSCriteriaInformation
