--- a/docs/api-reference/CRMScript.NetServer.NSCsFeatureToggle.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsFeatureToggle.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSCsFeatureToggle
   fullName: CRMScript.NetServer.NSCsFeatureToggle
   type: Class
-  summary: 
+  summary: "\nCarrier object for CsFeatureToggle.\n"
   example: 
 - uid: CRMScript.NetServer.NSCsFeatureToggle.#ctor
   commentId: M:CRMScript.NetServer.NSCsFeatureToggle.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSCsFeatureToggle.#ctor
   fullName: CRMScript.NetServer.NSCsFeatureToggle.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCsFeatureToggle class.\n"
   remarks: 
   syntax: 
     content: NSCsFeatureToggle
