--- a/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCsSessionKey
   fullName: CRMScript.NetServer.NSCsSessionKey
   type: Class
-  summary: 
+  summary: "\nCarrier object for CsSessionKey.\n"
   example: 
 - uid: CRMScript.NetServer.NSCsSessionKey.#ctor
   commentId: M:CRMScript.NetServer.NSCsSessionKey.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCsSessionKey.#ctor
   fullName: CRMScript.NetServer.NSCsSessionKey.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCsSessionKey class.\n"
   remarks: 
   syntax: 
     content: NSCsSessionKey
