--- a/docs/api-reference/CRMScript.NetServer.NSCurrency.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCurrency.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCurrency
   fullName: CRMScript.NetServer.NSCurrency
   type: Class
-  summary: 
+  summary: "\nCarrier object for Currency.\n"
   example: 
 - uid: CRMScript.NetServer.NSCurrency.#ctor
   commentId: M:CRMScript.NetServer.NSCurrency.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCurrency.#ctor
   fullName: CRMScript.NetServer.NSCurrency.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCurrency class.\n"
   remarks: 
   syntax: 
     content: NSCurrency
