--- a/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSCurrencyEntity
   fullName: CRMScript.NetServer.NSCurrencyEntity
   type: Class
-  summary: 
+  summary: "\nCarrier object for CurrencyEntity.\n"
   example: 
 - uid: CRMScript.NetServer.NSCurrencyEntity.#ctor
   commentId: M:CRMScript.NetServer.NSCurrencyEntity.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSCurrencyEntity.#ctor
   fullName: CRMScript.NetServer.NSCurrencyEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCurrencyEntity class.\n"
   remarks: 
   syntax: 
     content: NSCurrencyEntity
