--- a/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSCustomerCenterConfig
   fullName: CRMScript.NetServer.NSCustomerCenterConfig
   type: Class
-  summary: 
+  summary: "\nContains configuration when displaying the Customer Center. Carrier object for CustomerCenterConfig.\n"
   example: 
 - uid: CRMScript.NetServer.NSCustomerCenterConfig.#ctor
   commentId: M:CRMScript.NetServer.NSCustomerCenterConfig.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSCustomerCenterConfig.#ctor
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCustomerCenterConfig class.\n"
   remarks: 
   syntax: 
     content: NSCustomerCenterConfig
