--- a/docs/api-reference/CRMScript.NetServer.NSCustomerLanguage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerLanguage.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCustomerLanguage
   fullName: CRMScript.NetServer.NSCustomerLanguage
   type: Class
-  summary: 
+  summary: "\nCustomer languages that customer center supports. Carrier object for CustomerLanguage.\n"
   example: 
 - uid: CRMScript.NetServer.NSCustomerLanguage.#ctor
   commentId: M:CRMScript.NetServer.NSCustomerLanguage.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCustomerLanguage.#ctor
   fullName: CRMScript.NetServer.NSCustomerLanguage.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCustomerLanguage class.\n"
   remarks: 
   syntax: 
     content: NSCustomerLanguage
