--- a/docs/api-reference/CRMScript.NetServer.NSCustomerServiceStartup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerServiceStartup.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSCustomerServiceStartup
   fullName: CRMScript.NetServer.NSCustomerServiceStartup
   type: Class
-  summary: 
+  summary: "\nContains various data needed by Service for startup.<p></p>\n<strong>Do not use this API, as it is for internal use and might change without notice.</strong>\n"
   example: 
 - uid: CRMScript.NetServer.NSCustomerServiceStartup.#ctor
   commentId: M:CRMScript.NetServer.NSCustomerServiceStartup.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSCustomerServiceStartup.#ctor
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSCustomerServiceStartup class.\n"
   remarks: 
   syntax: 
     content: NSCustomerServiceStartup
