--- a/docs/api-reference/CRMScript.NetServer.NSDataRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDataRight.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSDataRight
   fullName: CRMScript.NetServer.NSDataRight
   type: Class
-  summary: 
+  summary: "\nCarrier object for DataRight.\n"
   example: 
 - uid: CRMScript.NetServer.NSDataRight.#ctor
   commentId: M:CRMScript.NetServer.NSDataRight.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSDataRight.#ctor
   fullName: CRMScript.NetServer.NSDataRight.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDataRight class.\n"
   remarks: 
   syntax: 
     content: NSDataRight
@@ -82,7 +82,7 @@ items:
   nameWithType: NSDataRight.SetDescription(String)
   fullName: CRMScript.NetServer.NSDataRight.SetDescription(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSDataRight.SetValue(String)
   fullName: CRMScript.NetServer.NSDataRight.SetValue(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetValue(String value)
