--- a/docs/api-reference/CRMScript.NetServer.NSDataRights.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDataRights.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSDataRights
   fullName: CRMScript.NetServer.NSDataRights
   type: Class
-  summary: 
+  summary: "\nCarrier object for DataRights.\n"
   example: 
 - uid: CRMScript.NetServer.NSDataRights.#ctor
   commentId: M:CRMScript.NetServer.NSDataRights.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSDataRights.#ctor
   fullName: CRMScript.NetServer.NSDataRights.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSDataRights class.\n"
   remarks: 
   syntax: 
     content: NSDataRights
@@ -101,7 +101,7 @@ items:
   nameWithType: NSDataRights.SetColumnsInfo(NSRelationToOwner[])
   fullName: CRMScript.NetServer.NSDataRights.SetColumnsInfo(NSRelationToOwner[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetColumnsInfo(NSRelationToOwner[] columnsInfo)
@@ -123,7 +123,7 @@ items:
   nameWithType: NSDataRights.SetRights(NSDataRight[][])
   fullName: CRMScript.NetServer.NSDataRights.SetRights(NSDataRight[][])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRights(NSDataRight[][] rights)
@@ -145,7 +145,7 @@ items:
   nameWithType: NSDataRights.SetRowsInfo(NSEntityName[])
   fullName: CRMScript.NetServer.NSDataRights.SetRowsInfo(NSEntityName[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRowsInfo(NSEntityName[] rowsInfo)
@@ -196,12 +196,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.NetServer.NSDataRight
-  commentId: T:CRMScript.NetServer.NSDataRight
-  isExternal: true
-  name: NSDataRight
-  nameWithType: NSDataRight
-  fullName: CRMScript.NetServer.NSDataRight
 - uid: CRMScript.NetServer.NSEntityName[]
   isExternal: true
   name: NSEntityName[]
