--- a/docs/api-reference/CRMScript.NetServer.NSConsentPurpose.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentPurpose.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSConsentPurpose
   fullName: CRMScript.NetServer.NSConsentPurpose
   type: Class
-  summary: 
+  summary: "\nCarrier object for ConsentPurpose.\n"
   example: 
 - uid: CRMScript.NetServer.NSConsentPurpose.#ctor
   commentId: M:CRMScript.NetServer.NSConsentPurpose.#ctor
@@ -49,7 +49,7 @@ items:
   nameWithType: NSConsentPurpose.#ctor
   fullName: CRMScript.NetServer.NSConsentPurpose.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSConsentPurpose class.\n"
   remarks: 
   syntax: 
     content: NSConsentPurpose
